precompute feature length widget

--- a/modmine/dbmodel/resources/genomic_precompute.properties
+++ b/modmine/dbmodel/resources/genomic_precompute.properties
@@ -19,6 +19,9 @@ precompute.query.8 = SELECT a3_.primaryIdentifier AS a1_, a4_.primaryIdentifier 
 
 precompute.query.9 = SELECT a5_.name AS a1_, a3_.primaryIdentifier AS a6_, COUNT(*) AS a2_ FROM org.intermine.model.bio.Chromosome AS a3_, org.intermine.model.bio.LocatedSequenceFeature AS a4_, org.intermine.model.bio.Organism AS a5_ WHERE (a4_.chromosome CONTAINS a3_ AND a4_.organism CONTAINS a5_) GROUP BY a5_.name, a3_.primaryIdentifier
 
+# feature length widget
+precompute.query.10 = SELECT a1_.length AS a2_ FROM org.intermine.model.bio.LocatedSequenceFeature AS a1_;
+
 # protein domain widget
 precompute.query.14 = SELECT a1_, a3_.name as a6_, a4_.primaryIdentifier AS a5_, a4_.name AS a7_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Protein AS a2_, org.intermine.model.bio.Organism AS a3_, org.intermine.model.bio.ProteinDomain AS a4_ WHERE (a1_.organism CONTAINS a3_ AND a1_.proteins CONTAINS a2_ AND a2_.proteinDomains CONTAINS a4_)
 
