--- a/modmine/dbmodel/resources/genomic_precompute.properties
+++ b/modmine/dbmodel/resources/genomic_precompute.properties
@@ -20,11 +20,11 @@ precompute.query.8 = SELECT a3_.primaryIdentifier AS a1_, a4_.primaryIdentifier 
 precompute.query.9 = SELECT a5_.name AS a1_, a3_.primaryIdentifier AS a6_, COUNT(*) AS a2_ FROM org.intermine.model.bio.Chromosome AS a3_, org.intermine.model.bio.LocatedSequenceFeature AS a4_, org.intermine.model.bio.Organism AS a5_ WHERE (a4_.chromosome CONTAINS a3_ AND a4_.organism CONTAINS a5_) GROUP BY a5_.name, a3_.primaryIdentifier
 
 # feature length widget
-precompute.query.10 = SELECT a1_.length AS a2_ FROM org.intermine.model.bio.LocatedSequenceFeature AS a1_
+precompute.query.10 = SELECT a1_.id AS a3_, a1_.length AS a4_, a2_.name AS a5_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Organism AS a2_ WHERE a1_.organism CONTAINS a2_
 
 # overlap widget
-precompute.query.11 = SELECT a1_.id, a1_.primaryIdentifier AS a7_, a6_.start AS a8_, a6_.end AS a9_, a5_.start AS a10_, a5_.end AS a11_, a2_.name AS a12_, a3_.distance AS a13_, a3_.direction AS a14_ FROM org.intermine.model.bio.BindingSite AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.GeneFlankingRegion AS a3_, org.intermine.model.bio.Gene AS a4_, org.intermine.model.bio.Location AS a5_, org.intermine.model.bio.Location AS a6_ WHERE a1_.organism CONTAINS a2_ AND a1_.overlappingFeatures CONTAINS a3_ AND a1_.chromosomeLocation CONTAINS a6_ AND a3_.gene CONTAINS a4_  AND a4_.chromosomeLocation CONTAINS a5_ AND LOWER(a3_.distance) = '10.0kb' 
-
+precompute.query.11 = SELECT a3_.direction AS a14_, a1_.id AS a15_, a1_.primaryIdentifier AS a7_, a6_.start AS a8_, a6_.end AS a9_, a5_.start AS a10_, a5_.end AS a11_, a2_.name AS a12_ FROM org.intermine.model.bio.BindingSite AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.GeneFlankingRegion AS a3_, org.intermine.model.bio.Gene AS a4_, org.intermine.model.bio.Location AS a5_, org.intermine.model.bio.Location AS a6_ WHERE a1_.organism CONTAINS a2_ AND a1_.overlappingFeatures CONTAINS a3_ AND a1_.chromosomeLocation CONTAINS a6_ AND a3_.gene CONTAINS a4_  AND a4_.chromosomeLocation CONTAINS a5_ AND LOWER(a3_.distance) = '10.0kb'
+ 
 # protein domain widget
 precompute.query.14 = SELECT a1_, a3_.name as a6_, a4_.primaryIdentifier AS a5_, a4_.name AS a7_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Protein AS a2_, org.intermine.model.bio.Organism AS a3_, org.intermine.model.bio.ProteinDomain AS a4_ WHERE (a1_.organism CONTAINS a3_ AND a1_.proteins CONTAINS a2_ AND a2_.proteinDomains CONTAINS a4_)
 
