--- a/modmine/dbmodel/resources/genomic_precompute.properties
+++ b/modmine/dbmodel/resources/genomic_precompute.properties
@@ -107,5 +107,5 @@ precompute.constructquery.35 = Gene goAnnotation GOAnnotation ontologyTerm Ontol
 precompute.constructquery.36 = Protein genes Gene goAnnotation GOAnnotation ontologyTerm OntologyTerm
 
 precompute.constructquery.400 = Location reverse.chromosomeLocation Gene,Intron,IntergenicRegion overlappingFeatures Submission.features.class submissions Submission ORDER BY 4.title 2.primaryIdentifier 3.secondaryIdentifier 1.start 1.end 1.strand
-precompute.constructquery.401 = Gene flankingRegions GeneFlankingRegion overlappingFeatures Submission.features.class submissions Submission ORDER BY 4.title 2.distance 2.direction
+precompute.constructquery.401 = Gene flankingRegions GeneFlankingRegion overlappingFeatures Submission.features.class submissions Submission ORDER BY 4.title 2.distance 2.direction 1.primaryIdentifier 3.secondaryIdentifier
 precompute.constructquery.402 = Location reverse.chromosomeLocation Exon overlappingFeatures Submission.features.class submissions Submission 2.gene Gene ORDER BY 4.title 2.primaryIdentifier 3.secondaryIdentifier 1.start 1.end 1.strand 5.primaryIdentifier
