modencode-metadata should not have priority for chromosomeLocation.

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -52,9 +52,9 @@ LocatedSequenceFeature.sequence = \
   modencode-metadata
 
 LocatedSequenceFeature.chromosomeLocation = \
-  modencode-metadata, \
   chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans
+  chado-db-wormbase-c_elegans, \
+  modencode-metadata
 
 MRNA.symbol = \
   chado-db-flybase-dmel, \
