--- a/bio/core/test/resources/modmine_acceptance_test_metadata.conf
+++ b/bio/core/test/resources/modmine_acceptance_test_metadata.conf
@@ -58,6 +58,15 @@ note: All features should be located on a chromosome.
 }
 
 no-results {
+sql: SELECT s.dccid, e.type, e.name from experimentalfactor e, experimentalfactorssubmissions es, submission s where e.id = es.experimentalfactors and s.id = es.submissions and e.propertyid is null order by 1;
+note: All experimental factors should have a value.
+}
+
+SELECT s.dccid, s.title, substring(lsf.class from '%.#"%#"' for '#') as feature, COUNT(*) FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome' and lsf.chromosomelocationid is null GROUP BY s.dccid, s.title, lsf.class ORDER BY s.title, lsf.class;
+note: All features should be located on a chromosome.
+}
+
+no-results {
   sql: select * from organism where genus is null or species is null or shortname is null or name is null or taxonid is null
   note: all fields of all organisms should be filled in
 }
