Add transcript_region to SO term mapping, fixes GFF export.

--- a/bio/webapp/resources/webapp/WEB-INF/soClassName.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/soClassName.properties
@@ -176,3 +176,5 @@ PossibleBaseCallError possible_base_call_error
 Codon codon
 RNAiReagent RNAi_reagent
 PossibleAssemblyError possible_assembly_error
+TranscriptRegion transcript_region
+
