Remove prioerities from skeleton file.

--- a/bio/skeletons/mine/dbmodel/resources/genomic_priorities.properties
+++ b/bio/skeletons/mine/dbmodel/resources/genomic_priorities.properties
@@ -4,43 +4,12 @@
 # priority for fields declared in superclass are not overridden by different order in subclass
 # e.g. identfier and organism always have priority as defined in BioEntity
 
-BioEntity.organism = \
-  *, \
-  ensembl, \
-  go-annotation, \
-  pdb
+# For example, to give interpro prioritiy over uniprot for the 'shortName' field of ProteinDomain:
+#
+# ProteinDomain.shortName = interpro, uniprot
 
-Gene.primaryIdentifier = \
-  uniprot, \
-  *
+# To give flybase priority over all other sources for Gene name:
+#
+# Gene.name = flybase, *
 
-Gene.secondaryIdentifier = \
-  uniprot, \
-  *
 
-Protein.primaryAccession = \
-  uniprot, \
-  *
-
-Protein.sequence = \
-  uniprot-fasta, \
-  uniprot, \
-  *
-
-ProteinDomain.shortName = \
-  interpro,\
-  uniprot, \
-  *
-
-Gene.symbol = \
-  uniprot, \
-  *
-
-DataSet.dataSource = \
-  flymine-static, \
-  *
-
-# temporary fix - description should only be loaded from flymine-static
-DataSet.description = \
-  flymine-static, \
-  *
