added go annotation to malariamine priorities.

--- a/bio/tutorial/malariamine/dbmodel/resources/genomic_priorities.properties
+++ b/bio/tutorial/malariamine/dbmodel/resources/genomic_priorities.properties
@@ -6,7 +6,8 @@
 
 Gene.primaryIdentifier = \
   malaria-gff, \
-  uniprot-malaria
+  uniprot-malaria, \
+  go-annotation
 
 Protein.sequence = \
   uniprot-malaria, \
