added superuser's initial password.
Former-commit-id: e856f422cc0c64a7aa82d49359dab1a5b9713406

--- a/bio/tutorial/malariamine/malariamine.properties
+++ b/bio/tutorial/malariamine/malariamine.properties
@@ -56,6 +56,7 @@ webapp.baseurl=http://www.flymine.org
 
 # account name for superuser (who can edit appearance and publish templates)
 superuser.account=test_user@mail_account
+superuser.initialPassword=secret
 
 # run with no associated web site
 project.standalone=true
