--- a/bio/webapp/resources/webapp/WEB-INF/soClassName.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/soClassName.properties
@@ -1,180 +1,191 @@
-Operator operator
-PrimaryTranscript primary_transcript
-TilingPath tiling_path
-PolyASignalSequence polyA_signal_sequence
-RNaseMRPRNA RNase_MRP_RNA
-Ribozyme ribozyme
-ThreePrimeUTR three_prime_UTR
-DecayedExon decayed_exon
-GroupIIntron group_I_intron
-MaturePeptide mature_peptide
-GroupIIIntron group_II_intron
-U2SnRNA U2_snRNA
-RNasePRNA RNase_P_RNA
-CDS CDS
-Substitution substitution
-AutocatalyticallySplicedIntron autocatalytically_spliced_intron
-ScRNA scRNA
-RibosomeEntrySite ribosome_entry_site
-MiRNA miRNA
-Ultracontig ultracontig
-Clip clip
-U12SnRNA U12_snRNA
-Transcript transcript
-U11SnRNA U11_snRNA
-Clone clone
-Deletion deletion
-TransSpliceAcceptorSite trans_splice_acceptor_site
-RRNA18S rRNA_18S
-ChromosomalStructuralElement chromosomal_structural_element
-SignalPeptide signal_peptide
-SnoRNA snoRNA
-U6atacSnRNA U6atac_snRNA
-U1SnRNA U1_snRNA
+AntisensePrimaryTranscript antisense_primary_transcript
 AntisenseRNA antisense_RNA
-SnRNA snRNA
-TransposableElementInsertionSite transposable_element_insertion_site
-RasiRNA rasiRNA
-Assembly assembly
-Match match
-ExpressedSequenceMatch expressed_sequence_match
-U4SnRNA U4_snRNA
-TilingPathFragment tiling_path_fragment
-PolyASite polyA_site
-DeletionJunction deletion_junction
-Operon operon
-SiRNA siRNA
-U4atacSnRNA U4atac_snRNA
-GuideRNA guide_RNA
-GeneGroup gene_group
-U5SnRNA U5_snRNA
-ReadPair read_pair
-CDNAMatch cDNA_match
-InvertedRepeat inverted_repeat
-Oligo oligo
-CloneEnd clone_end
-DatabankEntry databank_entry
-SequenceDifference sequence_difference
-MRNA mRNA
-BindingSite binding_site
-Polypeptide polypeptide
-Exon exon
-ProteinMatch protein_match
-Inversion inversion
 ARS ARS
-HammerheadRibozyme hammerhead_ribozyme
-U6SnRNA U6_snRNA
-PointMutation point_mutation
-Read read
-Supercontig supercontig
-SNP SNP
-PolypyrimidineTract polypyrimidine_tract
-ProteinCodingPrimaryTranscript protein_coding_primary_transcript
-VaultRNA vault_RNA
-FlankingRegion flanking_region
-InsertionSite insertion_site
-TelomeraseRNA telomerase_RNA
-YRNA Y_RNA
+Assembly assembly
 AssemblyComponent assembly_component
-Microsatellite microsatellite
-SRPRNA SRP_RNA
-PseudogenicRegion pseudogenic_region
-STS STS
-PCRProduct PCR_product
-DirectRepeat direct_repeat
-TFBindingSite TF_binding_site
-Gap gap
+Attenuator attenuator
+AutocatalyticallySplicedIntron autocatalytically_spliced_intron
+BindingSite binding_site
+BranchSite branch_site
+Cap cap
+CDNA cDNA
+CDNAMatch cDNA_match
+CDS CDS
+Centromere centromere
+ChromosomalStructuralElement chromosomal_structural_element
 Chromosome chromosome
+Clip clip
+Clone clone
+CloneEnd clone_insert_end
+CloneStart clone_insert_start
+Codon codon
 ComplexSubstitution complex_substitution
+Contig contig
+CopyNumberVariation copy_number_variation
+CpGIsland CpG_island
+CrossGenomeMatch cross_genome_match
+DatabankEntry databank_entry
+DecayedExon decayed_exon
+Deletion deletion
+DeletionJunction deletion_junction
+DirectRepeat direct_repeat
+DispersedRepeat dispersed_repeat
+Enhancer enhancer
+EnzymaticRNA enzymatic_RNA
+EST EST
+ESTMatch EST_match
+Exon exon
+ExonJunction exon_junction
+ExonRegion exon_region
+ExperimentalResultRegion experimental_result_region
+ExpressedSequenceMatch expressed_sequence_match
+FivePrimeUTR five_prime_UTR
+FlankingRegion flanking_region
+Gap gap
+Gene gene
+GeneGroup gene_group
+GoldenPathFragment golden_path_fragment
+GoldenPath golden_path
+GroupIIIntron group_II_intron
+GroupIIntron group_I_intron
+GuideRNA guide_RNA
+HammerheadRibozyme hammerhead_ribozyme
+HistoneBindingSite histone_binding_site
+Insertion insertion
+InsertionSite insertion_site
 Insulator insulator
-U14SnRNA U14_snRNA
-UTR UTR
-StRNA stRNA
-ORF ORF
-TranscriptionEndSite transcription_end_site
 IntegratedVirus integrated_virus
 IntergenicRegion intergenic_region
-CloneStart clone_start
-Contig contig
-TranscriptionStartSite transcription_start_site
+Intron intron
+Inversion inversion
+InvertedRepeat inverted_repeat
+Junction junction
+LocatedSequenceFeature located_sequence_feature
+Match match
+MatchPart match_part
+MatchSet match_set
+MaturePeptide mature_peptide
+MethylatedA methylated_A
+MethylatedBaseFeature methylated_base_feature
+MethylatedC methylated_C
+Microsatellite microsatellite
+Minisatellite minisatellite
+MiRNA miRNA
+ModifiedBaseSite modified_base_site
+MRNA mRNA
+NaturalTransposableElement natural_transposable_element
+NcPrimaryTranscript nc_primary_transcript
+NcRNA ncRNA
+NonTranscribedRegion non_transcribed_region
+NucleaseSensitiveSite nuclease_sensitive_site
+NucleotideMatch nucleotide_match
+NucleotideMotif nucleotide_motif
+Oligo oligo
+Operator operator
+Operon operon
+ORF ORF
+OriginOfReplication origin_of_replication
+OriginOfTransfer origin_of_transfer
+OvelappingESTSet overlapping_EST_set
+PCRProduct PCR_product
+PointMutation point_mutation
+PolyASequence polyA_sequence
+PolyASignalSequence polyA_signal_sequence
+PolyASite polyA_site
+Polypeptide polypeptide
+PolypyrimidineTract polypyrimidine_tract
+PossibleAssemblyError possible_assembly_error
+PossibleBaseCallError possible_base_call_error
+PrimaryTranscript primary_transcript
+Primer primer
+ProcessedTranscript processed_transcript
+Promoter promoter
+ProteinBindingSite protein_binding_site
+ProteinCodingPrimaryTranscript protein_coding_primary_transcript
+ProteinMatch protein_match
+Pseudogene pseudogene
+PseudogenicRegion pseudogenic_region
+RasiRNA rasiRNA
+ReadingFrame reading_frame
+ReadPair read_pair
+Read read
+Reagent reagent
 Region region
 RegulatoryRegion regulatory_region
-NucleaseSensitiveSite nuclease_sensitive_site
-MethylatedC methylated_C
-Silencer silencer
-GoldenPath golden_path
-SpliceDonorSite splice_donor_site
-Terminator terminator
-SequenceOntology Sequence_Ontology
-ReadingFrame reading_frame
-Attenuator attenuator
-SequenceVariant sequence_variant
-SpliceSite splice_site
-Reagent reagent
-SpliceEnhancer splice_enhancer
-Insertion insertion
-DispersedRepeat dispersed_repeat
-NcPrimaryTranscript nc_primary_transcript
-OriginOfReplication origin_of_replication
-MatchPart match_part
-RRNA rRNA
-TransitPeptide transit_peptide
-NucleotideMatch nucleotide_match
-Minisatellite minisatellite
-Tag tag
-TransposableElement transposable_element
-RestrictionFragment restriction_fragment
-SAGETag SAGE_tag
-OriginOfTransfer origin_of_transfer
-ModifiedBaseSite modified_base_site
-RRNA28S rRNA_28S
-Pseudogene pseudogene
-ESTMatch EST_match
-RRNA5S rRNA_5S
-Telomere telomere
-CrossGenomeMatch cross_genome_match
-SmallRegulatoryNcRNA small_regulatory_ncRNA
-RFLPFragment RFLP_fragment
-FivePrimeUTR five_prime_UTR
-SpliceosomalIntron spliceosomal_intron
-CpGIsland CpG_island
-Junction junction
-PolyASequence polyA_sequence
-MatchSet match_set
-Gene gene
-TRNA tRNA
-SpliceAcceptorSite splice_acceptor_site
-AntisensePrimaryTranscript antisense_primary_transcript
-VirtualSequence virtual_sequence
-TandemRepeat tandem_repeat
-ProcessedTranscript processed_transcript
-RepeatRegion repeat_region
-NcRNA ncRNA
-LocatedSequenceFeature located_sequence_feature
-Promoter promoter
-MethylatedBaseFeature methylated_base_feature
-TranslatedNucleotideMatch translated_nucleotide_match
-ExonJunction exon_junction
-BranchSite branch_site
-ExperimentalResultRegion experimental_result_region
-Intron intron
-GoldenPathFragment golden_path_fragment
-EST EST
-RRNA58S rRNA_5.8S
-NucleotideMotif nucleotide_motif
-RepeatFamily repeat_family
-Primer primer
-Enhancer enhancer
-Centromere centromere
-Remark remark
 Regulon regulon
-MethylatedA methylated_A
-Cap cap
-NonTranscribedRegion non_transcribed_region
-EnzymaticRNA enzymatic_RNA
-PossibleBaseCallError possible_base_call_error
-Codon codon
+Remark remark
+RepeatFamily repeat_family
+RepeatRegion repeat_region
+RestrictionFragment restriction_fragment
+RFLPFragment RFLP_fragment
+RibosomeEntrySite ribosome_entry_site
+Ribozyme ribozyme
 RNAiReagent RNAi_reagent
-PossibleAssemblyError possible_assembly_error
+RNaseMRPRNA RNase_MRP_RNA
+RNasePRNA RNase_P_RNA
+RRNA18S rRNA_18S
+RRNA28S rRNA_28S
+RRNA58S rRNA_5.8S
+RRNA5S rRNA_5S
+RRNA rRNA
+SAGETag SAGE_tag
+ScRNA scRNA
+SequenceDifference sequence_difference
+SequenceOntology Sequence_Ontology
+SequenceVariant sequence_variant
+SignalPeptide signal_peptide
+Silencer silencer
+SiRNA siRNA
+SL1AcceptorSite SL1_acceptor_site
+SL2AcceptorSite SL2_acceptor_site
+SmallRegulatoryNcRNA small_regulatory_ncRNA
+SnoRNA snoRNA
+SNP SNP
+SnRNA snRNA
+SpliceAcceptorSite trans_splice_acceptor_site
+SpliceDonorSite trans_splice_donor_site
+SpliceEnhancer splice_enhancer
+SpliceosomalIntron spliceosomal_intron
+SpliceSite splice_site
+SRPRNA SRP_RNA
+StartCodon start_codon
+StopCodon stop_codon
+StRNA stRNA
+STS STS
+Substitution substitution
+Supercontig supercontig
+Tag tag
+TandemRepeat tandem_repeat
+TelomeraseRNA telomerase_RNA
+Telomere telomere
+Terminator terminator
+TFBindingSite TF_binding_site
+ThreePrimeUTR three_prime_UTR
+TilingPathFragment tiling_path_fragment
+TilingPath tiling_path
+TranscriptionEndSite transcription_end_site
+TranscriptionStartSite transcription_start_site
 TranscriptRegion transcript_region
-
+Transcript transcript
+TransitPeptide transit_peptide
+TranslatedNucleotideMatch translated_nucleotide_match
+TransposableElementInsertionSite transposable_element_insertion_site
+TransposableElement transposable_element
+TransSpliceAcceptorSite trans_splice_acceptor_site
+TRNA tRNA
+TSS TSS
+U11SnRNA U11_snRNA
+U12SnRNA U12_snRNA
+U14SnRNA U14_snRNA
+U1SnRNA U1_snRNA
+U2SnRNA U2_snRNA
+U4atacSnRNA U4atac_snRNA
+U4SnRNA U4_snRNA
+U5SnRNA U5_snRNA
+U6atacSnRNA U6atac_snRNA
+U6SnRNA U6_snRNA
+Ultracontig ultracontig
+UTR UTR
+VaultRNA vault_RNA
+VirtualSequence virtual_sequence
+YRNA Y_RNA
