--- a/bio/core/test/resources/modmine_acceptance_test_metadata.conf
+++ b/bio/core/test/resources/modmine_acceptance_test_metadata.conf
@@ -48,13 +48,18 @@ no-results {
 
 
 no-results {
-  sql: SELECT distinct s.dccid, s.title, p.surnamepi as project from submission s, project p where p.id = s.projectid and s.dccid not in ( SELECT distinct s.dccid FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome') order by project, s.dccid
+  sql: SELECT distinct s.dccid, s.title, p.surnamepi as project from submission s, project p where p.id = s.projectid and s.dccid not in ( SELECT distinct s.dccid FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome') order by project, s.dccid;
   note: All submissions should have features.
 }
 
 no-results {
 sql: SELECT s.dccid, s.title, substring(lsf.class from '%.#"%#"' for '#') as feature, COUNT(*) FROM LocatedSequenceFeature AS lsf, submission s, bioentitiesdatasets bd where lsf.id = bd.bioentities and s.id = bd.datasets and lsf.class not like '%Chromosome' and lsf.chromosomelocationid is null GROUP BY s.dccid, s.title, lsf.class ORDER BY s.title, lsf.class;
 note: All features should be located on a chromosome.
+}
+
+no-results {
+sql: SELECT s.dccid, e.type, e.name from experimentalfactor e, experimentalfactorssubmissions es, submission s where e.id = es.experimentalfactors and s.id = es.submissions and e.propertyid is null order by 1;
+note: All experimental factors should have a value.
 }
 
 no-results {
