modmine script: added pubmed to the sources for modmine

--- a/bio/scripts/resources/get_scripts_modmine.config
+++ b/bio/scripts/resources/get_scripts_modmine.config
@@ -15,8 +15,8 @@ uniprot 6239
 
 
 #### get_ncbi_pubmed
-#pubmed	6239
-#pubmed	7227
+pubmed	6239
+pubmed	7227
 
 
 #### get_go_annotation_gene_association_map
