Changed modencode-metadata source name in priorities.
Former-commit-id: 518fe4c3a9839847a4212d938a981e92b48474f3

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -13,7 +13,7 @@ BioEntity.primaryIdentifier = \
 
 BioEntity.secondaryIdentifier = \
   chado-db-flybase-dmel, \
-  modencode-metadata, \
+  modencode-fly-metadata, \
   *
 
 BioEntity.organism = \
@@ -44,21 +44,21 @@ LocatedSequenceFeature.length = \
   wormbase-c_elegans-chromosome-fasta, \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-metadata
+  modencode-fly-metadata
 
 LocatedSequenceFeature.sequence = \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-metadata
+  modencode-fly-metadata
 
 LocatedSequenceFeature.chromosomeLocation = \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-metadata
+  modencode-fly-metadata
 
 MRNA.symbol = \
   chado-db-flybase-dmel, \
-  modencode-metadata
+  modencode-fly-metadata
 
 
 DataSet = \
