Add priority for Chromosome.featureType.

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -25,6 +25,10 @@ Gene.name = \
   chado-db-wormbase-c_elegans, \
   *
 
+Chromosome.featureType = \
+  chado-db-flybase-dmel, \
+  *
+
 Protein.name = \
   uniprot, \
   *
