Update branch to trunk version 20295
Former-commit-id: 71e2ce57622878ff240fdaf402c3191c19e27dac

--- a/modmine/dbmodel/resources/genomic_precompute.properties
+++ b/modmine/dbmodel/resources/genomic_precompute.properties
@@ -19,8 +19,8 @@ precompute.query.8 = SELECT a3_.primaryIdentifier AS a1_, a4_.primaryIdentifier 
 
 precompute.query.9 = SELECT a5_.name AS a1_, a3_.primaryIdentifier AS a6_, COUNT(*) AS a2_ FROM org.intermine.model.bio.Chromosome AS a3_, org.intermine.model.bio.LocatedSequenceFeature AS a4_, org.intermine.model.bio.Organism AS a5_ WHERE (a4_.chromosome CONTAINS a3_ AND a4_.organism CONTAINS a5_) GROUP BY a5_.name, a3_.primaryIdentifier
 
-# feature length widget
-precompute.query.10 = SELECT a2_.name AS a5_, a1_.id AS a3_, a1_.length AS a4_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Organism AS a2_ WHERE a1_.organism CONTAINS a2_ ORDER BY a2_.name, a1_.id
+# feature length widget - temporarily disabled
+#precompute.query.10 = SELECT a2_.name AS a5_, a1_.id AS a3_, a1_.length AS a4_ FROM org.intermine.model.bio.Gene AS a1_, org.intermine.model.bio.Organism AS a2_ WHERE a1_.organism CONTAINS a2_ ORDER BY a2_.name, a1_.id
 
 # overlap widget
 #precompute.query.11 = SELECT a2_.name AS a13_, a1_.id AS a12_, a1_.primaryIdentifier AS a7_, a6_.start AS a8_, a6_.end AS a9_, a5_.start AS a10_, a5_.end AS a11_ FROM org.intermine.model.bio.BindingSite AS a1_, org.intermine.model.bio.Organism AS a2_, org.intermine.model.bio.GeneFlankingRegion AS a3_, org.intermine.model.bio.Gene AS a4_, org.intermine.model.bio.Location AS a5_, org.intermine.model.bio.Location AS a6_ WHERE a1_.organism CONTAINS a2_ AND a1_.overlappingFeatures CONTAINS a3_ AND a1_.chromosomeLocation CONTAINS a6_ AND a3_.gene CONTAINS a4_ AND a4_.chromosomeLocation CONTAINS a5_ AND LOWER(a3_.distance) = '10.0kb' AND LOWER(a3_.direction) = 'upstream'
@@ -107,6 +107,6 @@ precompute.constructquery.35 = Gene goAnnotation GOAnnotation ontologyTerm Ontol
 precompute.constructquery.36 = Protein genes Gene goAnnotation GOAnnotation ontologyTerm OntologyTerm
 
 precompute.constructquery.400 = Location reverse.chromosomeLocation Gene overlappingFeatures Submission.features.class submissions Submission ORDER BY 4.title 2.primaryIdentifier 3.secondaryIdentifier 1.start 1.end 1.strand
-#precompute.constructquery.401 = Location reverse.chromosomeLocation Intron,IntergenicRegion overlappingFeatures Submission.features.class submissions Submission ORDER BY 4.title 2.primaryIdentifier 3.secondaryIdentifier 1.start 1.end 1.strand
-#precompute.constructquery.402 = Gene flankingRegions GeneFlankingRegion overlappingFeatures Submission.features.class submissions Submission ORDER BY 4.title 2.distance 2.direction 1.primaryIdentifier 3.secondaryIdentifier
-#precompute.constructquery.403 = Location reverse.chromosomeLocation Exon overlappingFeatures Submission.features.class submissions Submission 2.gene Gene ORDER BY 4.title 2.primaryIdentifier 3.secondaryIdentifier 1.start 1.end 1.strand 5.primaryIdentifier
+precompute.constructquery.401 = Location reverse.chromosomeLocation Intron,IntergenicRegion overlappingFeatures Submission.features.class submissions Submission ORDER BY 4.title 2.primaryIdentifier 3.secondaryIdentifier 1.start 1.end 1.strand
+precompute.constructquery.402 = Gene flankingRegions GeneFlankingRegion overlappingFeatures Submission.features.class submissions Submission ORDER BY 4.title 2.distance 2.direction 1.primaryIdentifier 3.secondaryIdentifier
+precompute.constructquery.403 = Location reverse.chromosomeLocation Exon overlappingFeatures Submission.features.class submissions Submission 2.gene Gene ORDER BY 4.title 2.primaryIdentifier 3.secondaryIdentifier 1.start 1.end 1.strand 5.primaryIdentifier
