--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -13,7 +13,7 @@ BioEntity.primaryIdentifier = \
 
 BioEntity.secondaryIdentifier = \
   chado-db-flybase-dmel, \
-  modencode-metadata, \
+  modencode-fly-metadata, \
   *
 
 BioEntity.organism = \
@@ -23,6 +23,10 @@ BioEntity.organism = \
 Gene.name = \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
+  *
+
+Chromosome.featureType = \
+  chado-db-flybase-dmel, \
   *
 
 Protein.name = \
@@ -44,21 +48,21 @@ LocatedSequenceFeature.length = \
   wormbase-c_elegans-chromosome-fasta, \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-metadata
+  modencode-fly-metadata
 
 LocatedSequenceFeature.sequence = \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-metadata
+  modencode-fly-metadata
 
 LocatedSequenceFeature.chromosomeLocation = \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-metadata
+  modencode-fly-metadata
 
 MRNA.symbol = \
   chado-db-flybase-dmel, \
-  modencode-metadata
+  modencode-fly-metadata
 
 
 DataSet = \
