--- a/bio/test-all/dbmodel/build.xml
+++ b/bio/test-all/dbmodel/build.xml
@@ -45,6 +45,7 @@
     <merge-additions file="bio/sources/omim/omim_additions.xml"/>
     <merge-additions file="bio/sources/biopax/biopax_additions.xml"/>
     <merge-additions file="bio/sources/treefam/treefam_additions.xml"/>
+    <merge-additions file="bio/sources/interpro-go/interpro-go_additions.xml"/>
     <merge-additions file="bio/core/shortcuts.xml"/>
   </target>
 
