--- a/bio/core/main/resources/organism_config.properties
+++ b/bio/core/main/resources/organism_config.properties
@@ -1937,3 +1937,8 @@ taxon.44689.abbreviation = dicty
 taxon.9685.genus = Felis
 taxon.9685.species = catus
 taxon.9685.abbreviation = Fcat
+taxon.10141.genus = Cavia
+taxon.10141.species = porcellus
+taxon.10141.abbreviation = Cpor
+
+
