Add experiment title key.

--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -1,6 +1,7 @@
 # modENCODE
 Lab.key_name=surname,project
 Project.key_surnamePI=surnamePI
+Experiment.key_title = title
 
 # BioEntity is abstract
 Stock.key_primaryidentifier=primaryIdentifier
