Experiment title -> name

--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -1,7 +1,7 @@
 # modENCODE
 Lab.key_name=surname,project
 Project.key_surnamePI=surnamePI
-Experiment.key_title = title
+Experiment.key_name = name
 
 # BioEntity is abstract
 Stock.key_primaryidentifier=primaryIdentifier
