modmine: metadata split by project
Former-commit-id: a551d4b93b29656cce58b316b70abc40ce07865c

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -13,7 +13,7 @@ BioEntity.primaryIdentifier = \
 
 BioEntity.secondaryIdentifier = \
   chado-db-flybase-dmel, \
-  modencode-fly-metadata, \
+  chado-db-wormbase-c_elegans, \
   *
 
 BioEntity.organism = \
@@ -48,21 +48,22 @@ LocatedSequenceFeature.length = \
   wormbase-c_elegans-chromosome-fasta, \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-fly-metadata
+  *
 
 LocatedSequenceFeature.sequence = \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-fly-metadata
+  *
 
 LocatedSequenceFeature.chromosomeLocation = \
   chado-db-flybase-dmel, \
   chado-db-wormbase-c_elegans, \
-  modencode-fly-metadata
+  *
 
 MRNA.symbol = \
   chado-db-flybase-dmel, \
-  modencode-fly-metadata
+  chado-db-wormbase-c_elegans, \
+  *
 
 
 DataSet = \
