don't hardcode the metatags
Former-commit-id: e10aae9acdb197b861ff15f07afd200c0f356e88

--- a/bio/tutorial/malariamine/webapp/resources/web.properties
+++ b/bio/tutorial/malariamine/webapp/resources/web.properties
@@ -34,3 +34,7 @@ attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeVal
 
 # colour scheme
 theme = green
+
+# populates meta tags
+meta.keywords = microarray, bioinformatics, drosophila, genomics
+meta.description = Integrated queryable database for Drosophila and Anopheles genomics
