modmine meta: added Submission.key_dccId

--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -2,6 +2,7 @@
 Lab.key_name=surname,project
 Project.key_surnamePI=surnamePI
 Experiment.key_name = name
+Submission.key_dccId = dccId
 
 # BioEntity is abstract
 Stock.key_primaryidentifier=primaryIdentifier
