--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -2,7 +2,7 @@
 Lab.key_name=surname,project
 Project.key_surnamePI=surnamePI
 Experiment.key_name = name
-Submission.key_dccId = dccId
+Submission.key_DCCid = DCCid
 
 # BioEntity is abstract
 Stock.key_primaryidentifier=primaryIdentifier
