--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -25,6 +25,11 @@ Gene.name = \
   chado-db-wormbase-c_elegans, \
   *
 
+Gene.source = \
+  chado-db-flybase-dmel, \
+  chado-db-wormbase-c_elegans, \
+  *
+
 Chromosome.featureType = \
   chado-db-flybase-dmel, \
   *
