--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -106,6 +106,7 @@ Ontology.key_title=title
 OntologyRelation.key=parentTerm, childTerm, relationship
 
 
+CDNA.key_primaryidentifier = primaryIdentifier
 CDNAClone.key_primaryidentifier = primaryIdentifier
 ProbeSet.key_primaryidentifier = primaryIdentifier
 
