modmine meta: added cdna.lenght as priority
Former-commit-id: c3c8449c0e0455a25defcbac1e7e6e3829b7e7c6

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -4,90 +4,31 @@
 # priority for fields declared in superclass are not overridden by different order in subclass
 # e.g. identfier and organism always have priority as defined in BioEntity
 
+BioEntity.primaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, uniprot, *
+BioEntity.secondaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+BioEntity.organism = *, go-annotation
 
-BioEntity.primaryIdentifier = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  uniprot, \
-  *
+CDNA.length = modencode-celniker-metadata, cdna-clone 
 
-BioEntity.secondaryIdentifier = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
+Chromosome.featureType = chado-db-flybase-dmel, *
 
-BioEntity.organism = \
-  *, \
-  go-annotation
+DataSet = modmine-static, *
 
-Gene.name = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
+Gene.name = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+Gene.source = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+Gene.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, uniprot, *
 
-Gene.source = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
+LocatedSequenceFeature.length = flybase-dmel-gene-fasta, wormbase-c_elegans-chromosome-fasta, \
+  chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 
-Chromosome.featureType = \
-  chado-db-flybase-dmel, \
-  *
+LocatedSequenceFeature.sequence = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 
-Protein.name = \
-  uniprot, \
-  *
+MRNA.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 
-ProteinDomain.name = \
-  interpro, \
-  *
+Protein.name = uniprot, *
+Protein.sequence = uniprot, *
+Protein.primaryAccession = uniprot, *
 
-Gene.symbol = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  uniprot, \
-  *
-
-LocatedSequenceFeature.length = \
-  flybase-dmel-gene-fasta, \
-  wormbase-c_elegans-chromosome-fasta, \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
-
-LocatedSequenceFeature.sequence = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
-
-LocatedSequenceFeature.chromosomeLocation = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
-
-MRNA.symbol = \
-  chado-db-flybase-dmel, \
-  chado-db-wormbase-c_elegans, \
-  *
-
-
-DataSet = \
-  modmine-static, *
-
-ProteinDomain.shortName = \
-  interpro, \
-  uniprot
-
-Protein.sequence = \
-  uniprot, \
-  *
-
-Protein.primaryAccession = \
-  uniprot, \
-  *
-
-# this is temporary until Synonym.source changes to a collection
-# Synonym.source = \
-#   chado-db-flybase-dmel, \
-#   chado-db-wormbase-c_elegans, \
-#   *
+ProteinDomain.name = interpro, *
+ProteinDomain.shortName = interpro, uniprot
