--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -8,7 +8,7 @@ BioEntity.primaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans
 BioEntity.secondaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 BioEntity.organism = *, go-annotation
 
-CDNA.length = modencode-celniker-metadata, cdna-clone 
+#CDNA.length = modencode-celniker-metadata, cdna-clone 
 
 Chromosome.featureType = chado-db-flybase-dmel, *
 
@@ -19,7 +19,7 @@ Gene.source = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 Gene.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, uniprot, *
 
 LocatedSequenceFeature.length = flybase-dmel-gene-fasta, wormbase-c_elegans-chromosome-fasta, \
-  chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+  chado-db-flybase-dmel, chado-db-wormbase-c_elegans, cdna-clone, *
 
 LocatedSequenceFeature.sequence = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
