modmine meta: added CDNA.secondaryIdentifier
Former-commit-id: 9950d890b25ab7cfff5c8f5ed2938a1b4bd90264

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -8,7 +8,7 @@ BioEntity.primaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans
 BioEntity.secondaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 BioEntity.organism = *, go-annotation
 
-#CDNA.length = modencode-celniker-metadata, cdna-clone 
+CDNA.secondaryIdentifier = modencode-celniker-metadata, cdna-clone
 
 Chromosome.featureType = chado-db-flybase-dmel, *
 
