modmine meta: let's try again...

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -5,10 +5,8 @@
 # e.g. identfier and organism always have priority as defined in BioEntity
 
 BioEntity.primaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, uniprot, *
-BioEntity.secondaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+BioEntity.secondaryIdentifier = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, cdna-clone, *
 BioEntity.organism = *, go-annotation
-
-CDNA.secondaryIdentifier = modencode-celniker-metadata, cdna-clone
 
 Chromosome.featureType = chado-db-flybase-dmel, *
 
