--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -21,6 +21,7 @@ LocatedSequenceFeature.length = flybase-dmel-gene-fasta, wormbase-c_elegans-chro
 
 LocatedSequenceFeature.sequence = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+LocatedSequenceFeature.featureType = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 
 MRNA.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 
