update acceptance tests.  only dmel genes have to have names, we now have a lot of orthologues from treefam which won't have names.  only uniprot proteins need to have names.  we now have a lot of proteins from chado that don't have names.
Former-commit-id: 13320faebed54564c6a32f99e81bda648ee27700

--- a/bio/core/test/resources/flymine_acceptance_test.conf
+++ b/bio/core/test/resources/flymine_acceptance_test.conf
@@ -5,7 +5,7 @@ assert {
 }
 
 assert {
-  sql: select count(*) >= 398534 from gene
+  sql: select count(*) >= 395000 from gene
 }
 
 assert {
@@ -183,7 +183,7 @@ no-results {
 }
 
 no-results {
-  sql: select * from gene where name is null;
+  sql: select * from gene g, organism o where g.name is null and o.id = g.organismid and o.taxonid = 7227;
   note:  all genes should have a name
 }
 
@@ -193,7 +193,7 @@ no-results {
 }
 
 no-results {
-  sql: select * from protein where name is null and secondaryidentifier is null;
+  sql: select * from protein p, dataset d where p.name is null and p.secondaryidentifier is null and (d.title = 'Swiss-Prot data set' or d.title = 'TrEMBL data set');
   note: All UniProt proteins should have names
 }
 
