Add description for MiRNATarget and more fields to Transcript inline table.

--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -70,6 +70,7 @@ Microsatellite=A very short unit sequence of DNA (2 to 4 bp) that is repeated mu
 Minisatellite=A repetitive sequence spanning 500 to 20,000 base pairs (a repeat unit is 5 - 30 base pairs).
 MiRNA=Small, ~22-nt, RNA molecule that is the endogenous transcript of a miRNA gene. miRNAs are produced from precursor molecules (SO:0000647) that can form  local hairpin structures, which ordinarily are processed (via the Dicer pathway) such that a single miRNA  molecule accumulates from one arm of a hairpin-precursor molecule. miRNAs  may trigger the cleavage of their target molecules or act as translational repressors.
 ModifiedBaseSite=A modified nucleotide, i.e. a nucleotide other than A, T, C. G or (in RNA) U.
+MiRNATarget=The region within a transcript that is the target of a particular microRNA.  Typically around 21nt long.  Often microRNA targets are predictions.
 MRNA=The intermediate molecule between DNA and protein.
 NcRNA=An mRNA sequence that does not encode for a protein rather the RNA molecule is the gene product.
 NcPrimaryTranscript=A primary transcript that is never translated into a protein.
