--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -55,6 +55,7 @@ Disease.key_omimid=omimId
 
 # Evidence is abstract
 GOEvidence.key_code=code
+OrthologueEvidenceCode.key_code=abbreviation
 
 # AnalysisResult does not need keys
 
