added some new class definitions for modmine

--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -1,7 +1,9 @@
 # from so_defs file
 Allele= An allele is one of a set of coexisting sequence variants of a gene.
+Antibody=An immunoglobulin complex that interacts selectively and non-covalently with an antigen.
 AntisensePrimaryTranscript=The reverse complement of the primary transcript.
 AntisenseRNA=Antisense RNA is RNA that is transcribed from the coding, rather than the template, strand of DNA. It is therefore complementary to mRNA.
+Array=A DNA microarray.
 ARS=A sequence that can autonomously replicate, as a plasmid, when transformed into a bacterial host.
 Assembly=A sequence of nucleotides  that has been algorithmically derived from an alignment of two or more different sequences.
 AssemblyComponent=A region of sequence which may be used to manufacture a longer assembled, sequence.
@@ -10,8 +12,10 @@ AutocatalyticallySplicedIntron=A self spliced intron.
 BindingSite=A region on the surface of a molecule that may interact with another molecule.
 BranchSite=A pyrimidine rich sequence near the 3' end of an intron to which the 5'end becomes covalently bound during nuclear splicing. The resulting structure resembles a lariat.
 Cap=A structure consisting of a 7-methylguanosine in 5'-5' triphosphate linkage with the first nucleotide of an mRNA. It is added post-transcriptionally, and is not encoded in the DNA.
+CDNA=DNA synthesized by reverse transcriptase using RNA as a template.
 CDNAMatch=A match against cDNA sequence.
 CDS=A contiguous RNA sequence which begins with, and includes, a start codon and ends with, and includes, a stop codon.
+CellLine= A cultured cell type that can be reproduced indefinitely.
 Centromere=A region of chromosome where the spindle fibres attach during mitosis and meiosis.
 ChromosomalDeletion=An incomplete chromosome.
 Chromosome=Structural unit composed of long DNA molecule.
@@ -22,6 +26,7 @@ CloneStart=The start of the clone insert.
 Codon=A set of (usually) three nucleotide bases in a DNA or RNA sequence, which together signify a unique amino acid or the termination of translation.
 ComplexSubstitution=When no simple or well defined DNA mutation event describes the observed DNA change, the keyword "complex" should be used. Usually there are multiple equally plausible explanations for the change.
 Contig=A contiguous sequence derived from sequence assembly. Has no gaps, but may contain N's from unknown/unavailable bases.
+CopyNumberVariation= A variation that increases or decreases the copy number of a given region
 CpGIsland=Regions of a few hundred to a few thousand bases in vertebrate genomes that are relatively GC and CpG rich; they are typically unmethylated and often found near the 5' ends of genes.
 CRM=A regulatory region where more than 1 transcription factor binding site together are regulatorily active.
 CrossGenomeMatch=A nucleotide match against a sequence from another organism.
@@ -29,6 +34,7 @@ DatabankEntry=The sequence referred to by an entry in a databank such as GenBank
 DecayedExon=A non-functional descendent of an exon.
 Deletion=The sequence that is deleted.
 DeletionJunction=The space between two bases in a sequence which marks the position where a deletion has occurred.
+DevelopmentalStage= A stage in development defined by morphological, cytological or other visible features.
 DirectRepeat=A repeat where the same sequence is repeated in the same direction. Example: GCTGA-----GCTGA.
 DispersedRepeat=A repeat that is located at dispersed sites in the genome.
 Enhancer=A cis-acting sequence that increases the utilisation of (some) eukaryotic promoters, and can function in either orientation and in any location (upstream or downstream) relative to the promoter.
@@ -81,6 +87,7 @@ Oligo=A short oligonucleotide sequence, of length on the order of 10's of bases;
 Operon=A group of contiguous genes transcribed as a single (polycistronic) mRNA from a single regulatory region.
 ORF=A nucleic acid sequence that, when read as sequential triplets, has the potential of encoding a sequential string of amino acids.
 OriginOfReplication=The origin of replication; starting site for duplication of a nucleic acid molecule to give two identical copies.
+OverlappingESTSet= A continuous experimental result region extending the length of multiple overlapping EST's.
 PCRProduct=A region amplified by a PCR reaction.
 PointMutation=A mutation event where a single DNA nucleotide changes into another nucleotide.
 PolyASequence=Sequence of about 100 nucleotides of A at the 3' end of most eukaryotic mRNAs.
@@ -134,6 +141,8 @@ SequenceVariant=A region of sequence where variation has been observed.
 SignalPeptide=The sequence  for an N-terminal domain of a secreted protein; this domain is involved in  attaching nascent polypeptide to the membrane leader sequence.
 #Silencer=Combination of short DNA sequence elements which suppress the transcription of an adjacent gene or genes.
 SiRNA=Small RNA molecule that is the product of a longer exogenous or endogenous dsRNA, which is either a bimolecular duplex or very long hairpin, processed (via the Dicer pathway) such that numerous siRNAs accumulate from both strands of the dsRNA. sRNAs trigger the cleavage of their target molecules.
+SL1AcceptorSite= Splice acceptor site for spliced leader 1 (SL1) RNA
+SL2AcceptorSite= Splice acceptor site for spliced leader 2 (SL2) RNA
 SmallRegulatoryNcRNA=A non-coding RNA, usually with a specific secondary structure, that acts to regulate gene expression.
 SnoRNA=Small nucleolar RNAs (snoRNAs) are involved in the processing and modification of rRNA in the nucleolus. There are two main classes of snoRNAs: the box C/D class, and the box H/ACA class. U3 snoRNA is a member of the box C/D class. Indeed, the box C/D element is a subset of the six short sequence elements found in all U3 snoRNAs, namely boxes A, A', B, C, C', and D. The U3 snoRNA secondary structure is characterised by a small 5' domain (with boxes A and A'), and a larger 3' domain (with boxes B, C, C', and D), the two domains being linked by a single-stranded hinge. Boxes B and C form the B/C motif, which appears to be exclusive to U3 snoRNAs, and boxes C' and D form the C'/D motif. The latter is functionally similar to the C/D motifs found in other snoRNAs. The 5' domain and the hinge region act as a pre-rRNA-binding domain. The 3' domain has conserved protein-binding sites. Both the box B/C and box C'/D motifs are sufficient for nuclear retention of U3 snoRNA. The box C'/D motif is also necessary for nucleolar localisation, stability and hypermethylation of U3 snoRNA. Both box B/C and C'/D motifs are involved in specific protein interactions and are necessary for the rRNA processing functions of U3 snoRNA.
 SNP=SNPs are single base pair positions in genomic DNA at which different sequence alternatives (alleles) exist in normal individuals in some population(s), wherein the least frequent allele has an abundance of 1% or greater.
@@ -144,6 +153,8 @@ SnRNA=Small non-coding RNA in the nucleoplasm.
 #SpliceEnhancer=Region of a transcript that regulates splicing.
 #SpliceSite=The position where intron is excised.
 SRPRNA=The signal recognition particle (SRP) is a universally conserved ribonucleoprotein. It is involved in the co-translational targeting of proteins to membranes. The eukaryotic SRP consists of a 300-nucleotide 7S RNA and six proteins: SRPs 72, 68, 54, 19, 14, and 9. Archaeal SRP consists of a 7S RNA and homologues of the eukaryotic SRP19 and SRP54 proteins. In most eubacteria, the SRP consists of a 4.5S RNA and the Ffh protein (a homologue of the eukaryotic SRP54 protein). Eukaryotic and archaeal 7S RNAs have very similar secondary structures, with eight helical elements. These fold into the Alu and S domains, separated by a long linker region. Eubacterial SRP is generally a simpler structure, with the M domain of Ffh bound to a region of the 4.5S RNA that corresponds to helix 8 of the eukaryotic and archaeal SRP S domain. Some Gram-positive bacteria (e.g. Bacillus subtilis), however, have a larger SRP RNA that also has an Alu domain. The Alu domain is thought to mediate the peptide chain elongation retardation function of the SRP. The universally conserved helix which interacts with the SRP54/Ffh M domain mediates signal sequence recognition. In eukaryotes and archaea, the SRP19-helix 6 complex is thought to be involved in SRP assembly and stabilises helix 8 for SRP54 binding.
+StartCodon=First codon to be translated by a ribosome.
+StopCodon=A set of three nucleotides that indicates the end of information for protein synthesis.
 StRNA=Non-coding RNAs of about 21 nucleotides in length that regulate temporal development; first discovered in  C. elegans.
 STS=Short (typically a few hundred base pairs) DNA sequence that has a single occurrence in a genome and whose location and base sequence are known.
 Substitution=Any change in genomic DNA caused by a single event.
@@ -157,8 +168,12 @@ Supercontig=One or more contigs that have been ordered and oriented using end-re
 TFBindingSite=A region of a molecule that binds to a transcription factor.
 TFmodule=A regulatory region where more than 1 transcription factor binding site together are regulatorily active.
 ThreePrimeUTR=A region at the 3' end of a mature transcript (following the stop codon) that is not translated into a protein.
+ThreePrimeRACEClone=A three prime RACE (Rapid Amplification of cDNA Ends) clone is a cDNA clone copied from the 3' end of an mRNA (using a poly-dT primer to capture the polyA tail and a gene-specific or randomly primed 5' primer), and spliced into a vector for propagation in a suitable host.
+ThreePrimeRST=A single sequencing read from a RACE product spanning part or all of the 3' untranslated regions of a transcript.
+ThreePrimeUST=An EST spanning part or all of the 3' untranslated regions of a transcript.
 TilingPath=A set of regions which overlap with minimal polymorphism to form a linear sequence.
 TilingPathFragment=A piece of sequence that makes up a tiling_path (SO:0000472.).
+Tissue=An aggregate of cells,that together carry out a specific function
 TmRNA=tmRNA liberates a mRNA from a stalled ribosome. To accomplish this part of the tmRNA is used as a reading frame that ends in a translation stop signal. The broken mRNA is replaced in the ribosome by the tmRNA and translation of the tmRNA leads to addition of a proteolysis tag to the incomplete protein enabling recognition by a protease. Recently a number of permuted tmRNAs genes have been found encoded in two parts. tmRNAs have been identified in eubacteria and some chloroplasts but are absent from archaeal and eukaryote nuclear genomes.
 Transcript=An RNA synthesised on a DNA or RNA template by an RNA polymerase.
 TranscriptionEndSite=The region where transcription ends.
@@ -167,9 +182,11 @@ TranslatedNucleotideMatch= A match against a translated sequence.
 TransposableElement=A transposon or insertion sequence. An element that can insert in a variety of DNA sequences.
 TransposableElementGene=A gene encoded within a transposable element. For example gag, int, env and pol are the transposable element genes of the TY element in yeast.
 TransposableElementInsertionSite=The site in a genome where a transposable_element has inserted.
+Transposition=A chromosomal variation, where a chromosome region is transferred to a new position on the same or another chromosome
 TransSpliceAcceptorSite=The process that produces mature transcripts by combining exons of independent pre-mRNA molecules. The acceptor site lies on the 3' of these molecules
 TRNA=Transfer RNA (tRNA) molecules are approximately 80 nucleotides in length. Their secondary structure includes four short double-helical elements and three loops (D, anti-codon, and T loops). Further hydrogen bonds mediate the characteristic L-shaped molecular structure. tRNAs have two regions of fundamental functional importance: the anti-codon, which is responsible for specific mRNA codon recognition, and the 3' end, to which the tRNA's corresponding amino acid is attached (by aminoacyl-tRNA synthetases). tRNAs cope with the degeneracy of the genetic code in two manners: having more than one tRNA (with a specific anti-codon) for a particular amino acid; and 'wobble' base-pairing, i.e. permitting non-standard base-pairing at the 3rd anti-codon position.
 U11SnRNA=U11 snRNA plays a role in splicing of the minor U12-dependent class of eukaryotic nuclear introns, similar to U1 snRNA in the major class spliceosome it base pairs to the conserved 5' splice site sequence.
+TSS=The first base where RNA polymerase begins to synthesize the RNA transcript.
 U12SnRNA=The U12 small nuclear (snRNA), together with U4atac/U6atac, U5, and U11 snRNAs and associated proteins, forms a spliceosome that cleaves a divergent class of low-abundance pre-mRNA introns.
 U14SnRNA=U14 small nucleolar RNA (U14 snoRNA) is required for early cleavages of eukaryotic precursor rRNAs. In yeasts, this molecule possess a stem-loop region (known as the Y-domain) which is essential for function. A similar structure, but with a different consensus sequence, is found in plants, but is absent in vertebrates.
 U1SnRNA=U1 is a small nuclear RNA (snRNA) component of the spliceosome (involved in pre-mRNA splicing). Its 5' end forms complementary base pairs with the 5' splice junction, thus defining the 5' donor site of an intron. There are significant differences in sequence and secondary structure between metazoan and yeast U1 snRNAs, the latter being much longer (568 nucleotides as compared to 164 nucleotides in human). Nevertheless, secondary structure predictions suggest that all U1 snRNAs share a 'common core' consisting of helices I, II, the proximal region of III, and IV.
