Added featureType priority.

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -19,7 +19,7 @@ LocatedSequenceFeature.length = flybase-dmel-gene-fasta, wormbase-c_elegans-chro
 
 LocatedSequenceFeature.sequence = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
-LocatedSequenceFeature.featureType = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+LocatedSequenceFeature.featureType = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, modencode-piano-metadata, modencode-waterston-metadata, *
 
 MRNA.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 
