Added Transcript location priority.
Former-commit-id: d527444c83eeff0e74572bc4ca02ae59c318fc6c

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -22,6 +22,7 @@ LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-worm
 LocatedSequenceFeature.featureType = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, modencode-piano-metadata, modencode-waterston-metadata, *
 
 MRNA.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+Transcript.chromosomeLocation = modencode-waterston-metadata, modencode-piano-metadata
 
 Protein.name = uniprot, *
 Protein.sequence = uniprot, *
