--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -18,11 +18,10 @@ LocatedSequenceFeature.length = flybase-dmel-gene-fasta, wormbase-c_elegans-chro
   chado-db-flybase-dmel, chado-db-wormbase-c_elegans, cdna-clone, *
 
 LocatedSequenceFeature.sequence = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
-LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
+LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, modencode-waterston-metadata, modencode-piano-metadata, *
 LocatedSequenceFeature.featureType = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, modencode-piano-metadata, modencode-waterston-metadata, *
 
 MRNA.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
-Transcript.chromosomeLocation = modencode-waterston-metadata, modencode-piano-metadata
 
 Protein.name = uniprot, *
 Protein.sequence = uniprot, *
