Add another priority for length.

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -15,7 +15,7 @@ Gene.source = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 Gene.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, uniprot, *
 
 LocatedSequenceFeature.length = flybase-dmel-gene-fasta, wormbase-c_elegans-chromosome-fasta, \
-  chado-db-flybase-dmel, chado-db-wormbase-c_elegans, cdna-clone, *
+  chado-db-flybase-dmel, chado-db-wormbase-c_elegans, cdna-clone, modencode-waterston-metadata, modencode-piano-metadata, *
 
 LocatedSequenceFeature.sequence = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, modencode-waterston-metadata, modencode-piano-metadata, *
