modmine meta: corrected reference ot wikilink
Former-commit-id: b8895edab5b573967052f97db03ab5f066bcccb6

--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -3,7 +3,7 @@ Lab.key_name=surname,project
 Project.key_surnamePI=surnamePI
 Experiment.key_name = name
 Submission.key_DCCid = DCCid
-SubmissionProperty = wikiLink
+SubmissionProperty.key_wikilink = wikiLink
 
 # BioEntity is abstract
 Stock.key_primaryidentifier=primaryIdentifier
