add config for reactome script

--- a/bio/scripts/resources/get_scripts.config
+++ b/bio/scripts/resources/get_scripts.config
@@ -60,3 +60,7 @@ biomart	cfamiliaris	taxon	9615
 biomart	aaegypti	taxon	7159
 biomart	agambiae	taxon	7165
 
+####get_reactome####
+reactome Drosophila melanogaster
+reactome Saccharomyces cerevisiae
+reactome Caenorhabditis elegans
