--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -83,13 +83,13 @@ DistanceRelation.key_all = subject, object
 
 
 # IntAct and BioGRID
-#InteractionTerm.key_name=name
-#InteractionTerm.key_identifier=identifier
- #InteractionExperiment.key_name_pub = name, publication
-#InteractionRegion.key_region = location, interaction, gene
-
- #Interaction.key_interaction = shortName, gene, experiment
-#Interaction.key_name_role = experiment, name, role
+InteractionTerm.key_name=name
+InteractionTerm.key_identifier=identifier
+InteractionExperiment.key_name_pub = name, publication
+InteractionRegion.key_region = location, interaction, gene
+Interaction.key_interaction = shortName, gene, experiment
+Interaction.key_name_role = experiment, name, role
+Interaction.key_name_role_type = experiment, name, role, type
 
 
 
