--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -14,8 +14,8 @@ Gene.name = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 Gene.source = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 Gene.symbol = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, uniprot, *
 
-LocatedSequenceFeature.length = flybase-dmel-gene-fasta, wormbase-c_elegans-chromosome-fasta, \
-  chado-db-flybase-dmel, chado-db-wormbase-c_elegans, cdna-clone, modencode-waterston-metadata, modencode-piano-metadata, *
+LocatedSequenceFeature.length = flybase-dmel-gene-fasta, wormbase-c_elegans-chromosome-fasta, chado-dpse-gene-fasta,\
+  chado-db-flybase-dmel, chado-db-wormbase-c_elegans, chado-db-flybase-dpse, cdna-clone, modencode-waterston-metadata, modencode-piano-metadata, *
 
 LocatedSequenceFeature.sequence = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, *
 LocatedSequenceFeature.chromosomeLocation = chado-db-flybase-dmel, chado-db-wormbase-c_elegans, modencode-waterston-metadata, modencode-piano-metadata, *
